--- a/index.html
+++ b/index.html
@@ -4,6 +4,59 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
+        <link rel="stylesheet" href="css/style.css" />
     </head>
-    <body></body>
+    <body>
+        <header>
+            <h1>Katik | Kalkulator matematik</h1>
+        </header>
+        <main>
+            <div class="container">
+                <div class="card">
+                    <div class="content-header">
+                        <h2>Welcome to Katik</h2>
+                        <p>
+                            Situs web sederhana yang membantu menghitung luas dan keliling bangun datar. Dengan
+                            memasukkan ukuran sisi bangun datar, Katik Web dapat menampilkan hasil perhitungan luas dan
+                            keliling dengan cepat dan akurat.
+                        </p>
+                    </div>
+                    <div class="content-body">
+                        <div class="card">
+                            <h3>Luas Persegi</h3>
+                            <div class="keterangan">
+                                <img src="assets/persegi.jpg" alt="persegi" />
+                                <div>
+                                    <p>Luas persegi dihitung dengan mengalikan panjang sisi dengan lebar sisi.</p>
+                                    <p>L = S x S</p>
+                                    <p>Di mana s adalah panjang sisi persegi.</p>
+                                </div>
+                            </div>
+                            <form action="">
+                                <input type="number" />
+                                <button>Hitung</button>
+                                <button>reset</button>
+                            </form>
+                        </div>
+                        <div class="card">
+                            <h3>Keliling Persegi</h3>
+                            <div class="keterangan">
+                                <img src="assets/persegi.jpg" alt="persegi" />
+                                <div>
+                                    <p>Keliling persegi dihitung dengan menjumlahkan semua sisi persegi.</p>
+                                    <p>K = 4 x s</p>
+                                    <p>Di mana s adalah panjang sisi persegi.</p>
+                                </div>
+                            </div>
+                            <form action="">
+                                <input type="number" />
+                                <button>Hitung</button>
+                                <button>reset</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </main>
+    </body>
 </html>
