change header paragraf and styling button

--- a/index.html
+++ b/index.html
@@ -15,11 +15,7 @@
                 <div class="card">
                     <div class="content-header">
                         <h2>Welcome to <span>Katik</span></h2>
-                        <p>
-                            Situs web sederhana yang membantu menghitung luas dan keliling bangun datar. Dengan
-                            memasukkan ukuran sisi bangun datar, Katik Web dapat menampilkan hasil perhitungan luas dan
-                            keliling dengan cepat dan akurat
-                        </p>
+                        <p>Situs web sederhana yang membantu menghitung luas dan keliling bangun datar persegi.</p>
                     </div>
                     <div class="content-body">
                         <div class="card">
