delete folder assets and change source image

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                         <div class="card">
                             <h3>Luas Persegi</h3>
                             <div class="keterangan">
-                                <img src="assets/persegi.jpg" alt="Luas Persegi Image" />
+                                <img src="http://katik.azurewebsites.net/images/persegi.jpg" alt="Luas Persegi Image" />
                                 <div>
                                     <p>Luas persegi dihitung dengan mengalikan panjang sisi dengan lebar sisi.</p>
                                     <p>L = S x S</p>
@@ -40,7 +40,10 @@
                         <div class="card">
                             <h3>Kelilling Persegi</h3>
                             <div class="keterangan">
-                                <img src="assets/persegi.jpg" alt="Keliling Persegi Image" />
+                                <img
+                                    src="http://katik.azurewebsites.net/images/persegi.jpg"
+                                    alt="Keliling Persegi Image"
+                                />
                                 <div>
                                     <p>Keliling persegi dihitung dengan menjumlahkan semua sisi persegi.</p>
                                     <p>K = 4 x S</p>
