fixing button reset and add input required

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
                             <form id="calculateArea">
                                 <label for="luasPersegiInput">Hitung Luas Persegi</label>
                                 <div class="container-input">
-                                    <input type="number" id="luasPersegiInput" />
+                                    <input type="number" id="luasPersegiInput" required />
                                     <button type="submit">Hitung</button>
-                                    <button type="reset" id="reset">Reset</button>
+                                    <button type="reset" id="resetLuas">Reset</button>
                                 </div>
                             </form>
                             <div id="resultCalculateArea"></div>
@@ -54,9 +54,9 @@
                             <form id="calculatePerimeter">
                                 <label for="kelilingPersegiInput">Hitung Keliling Persegi</label>
                                 <div class="container-input">
-                                    <input type="number" id="kelilingPersegiInput" />
+                                    <input type="number" id="kelilingPersegiInput" required />
                                     <button type="submit">Hitung</button>
-                                    <button type="reset">Reset</button>
+                                    <button type="reset" id="resetKeliling">Reset</button>
                                 </div>
                             </form>
                             <div id="resultCalculatePerimeter"></div>
