--- a/index.html
+++ b/index.html
@@ -66,7 +66,10 @@
             </div>
         </main>
         <footer>
-            <p>&copy; 2024 Adit Praditia. All rights reserved.</p>
+            <p>
+                &copy; 2024 <a href="https://praditia12.github.io/" style="color: white">Adit Praditia</a>. All rights
+                reserved.
+            </p>
         </footer>
 
         <script src="js/script.js"></script>
