fixing link source image

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                             <h3>Kelilling Persegi</h3>
                             <div class="keterangan">
                                 <img
-                                    src="http://katik.azurewebsites.net/images/persegi.jpg"
+                                    src="https://katik.azurewebsites.net/images/persegi.jpg"
                                     alt="Keliling Persegi Image"
                                 />
                                 <div>
